<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:background="#35CE3B"
    tools:context=".RegisterActivity">

    <EditText
        android:id="@+id/edittext_username"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="250dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/user"
        android:hint="@string/username"/>

    <EditText
        android:id="@+id/edittext_password"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/password"/>

    <EditText
        android:id="@+id/edittext_conf_password"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:background="#ffffff"
        android:drawableLeft="@drawable/password"
        android:hint="@string/confirm_password"/>

    <Button
        android:id="@+id/button_register"
        android:layout_width="170dp"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:text="@string/register"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="10dp">

        <TextView
            android:id="@+id/textview_already_registered"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textColor="#EB000000"
            android:text="Already registered?"/>

        <TextView
            android:id="@+id/textview_login"
            android:layout_width="wrap_content"
            android:layout_height="35dp"
            android:textStyle="bold"
            android:textColor="#EB000000"
            android:paddingLeft="10dp"
            android:text="Login"/>

    </LinearLayout>




</LinearLayout>