<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout7"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    tools:context=".MainActivity">

    <include
        android:id="@+id/include2"
        layout="@layout/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="100dp"
        app:layout_constraintBottom_toTopOf="@+id/edittext_username"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText

        android:id="@+id/edittext_username"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:drawableStart="@drawable/user"
        android:drawablePadding="10dp"
        android:hint="@string/username"
        android:lineSpacingExtra="8sp"
        android:singleLine="false"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/edittext_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include2"
        android:inputType="text"
        android:importantForAutofill="no" />


    <EditText

        android:id="@+id/edittext_password"
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:drawableStart="@drawable/password"
        android:drawablePadding="10dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/button_login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_username"
        android:importantForAutofill="no" />


    <Button

        android:id="@+id/button_login"
        android:layout_width="163dp"
        android:layout_height="40dp"
        android:layout_marginBottom="20dp"
        android:background="@drawable/btn_rounded"
        android:text="@string/login"
        android:textColor="#ffffffff"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/textview_register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edittext_password" />


    <TextView
        android:id="@+id/textview_registered"
        android:layout_width="wrap_content"
        android:layout_height="35dp"
        android:text="@string/not_registered"
        android:textColor="#EB000000"
        app:layout_constraintBaseline_toBaselineOf="@+id/textview_register"
        app:layout_constraintEnd_toStartOf="@+id/textview_register"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textview_register"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginBottom="46dp"
        android:paddingStart="10dp"
        android:text="@string/register"
        android:textColor="#EB000000"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textview_registered"
        app:layout_constraintTop_toBottomOf="@+id/button_login" />


</androidx.constraintlayout.widget.ConstraintLayout>
